# fork2-reverse-api-engineer

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
chrome-extension/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
chrome-extension/public/: manifest.json
chrome-extension/src/: index.css
chrome-extension/src/background/: service-worker.ts
chrome-extension/src/components/: agent-action.tsx  chat-input.tsx  icons.tsx  markdown-renderer.tsx  mode-selector.tsx  session-selector.tsx  terminal.tsx
chrome-extension/src/components/ui/: code-block.tsx
chrome-extension/src/content/: codegen-recorder.ts
chrome-extension/src/shared/: capture.ts  native-host.ts  storage.ts  types.ts
chrome-extension/src/sidepanel/: index.html  side-panel.tsx
examples/mintlify/: README.md  api_client.py
src/reverse_api/: auto_engineer.py  base_engineer.py  browser.py  cli.py  collector.py  collector_ui.py  config.py  copilot_engineer.py  engineer.py  native_host.py  opencode_engineer.py  opencode_ui.py  pricing.py  tui.py  utils.py  本项目运行手册.md
src/reverse_api2/: README.md  check_api.py  example.py  example_simple.py  opencode_client.py  output.txt  quick_test.py  test_api.py  运行.md
src/reverse_api3/: README.md  chat_tui.py
src/reverse_api4/: PLAN.md  README.md  __init__.py  analyzer.py  capturer.py  cli.py  generator.py  models.py  tui.py
src/reverse_api4/output/: API_DOC.md  api_client.py  openapi.json
tests/: conftest.py  test_action_recorder.py  test_auto_engineer.py  test_base_engineer.py  test_collector.py  test_collector_ui.py  test_config.py  test_engineer.py  test_init.py  test_messages.py  test_native_host.py  test_opencode_engineer.py  test_opencode_ui.py  test_pricing.py  test_run_command.py  test_session.py  test_sync.py  test_tui.py  test_utils.py
