[project]
name = "reverse-api-engineer"
version = "0.4.0"
description = "A tool to capture browser traffic for API reverse engineering"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Kalil", email = "kalil0321@users.noreply.github.com" }
]
license = { text = "MIT" }
keywords = ["api", "reverse-engineering", "browser", "har", "playwright", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.0",
    "click>=8.1.0",
    "claude-agent-sdk>=0.1.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "requests>=2.32.5",
    "anthropic>=0.40.0",
    "brotli>=1.2.0",
    "aiohttp>=3.12.15",
    "watchdog>=3.0.0",
    "setproctitle>=1.3.0",
    "sprites-py>=0.0.1a1",
]

[project.optional-dependencies]
agent = [
    # browser-use must be installed separately from git (PyPI doesn't allow git dependencies)
    # See installation instructions in README
    "stagehand"
]
pricing = [
    "litellm>=1.0.0",
]
collector = [
    "markdownify>=0.12.0",
    "beautifulsoup4>=4.12.0",
]
copilot = [
    "github-copilot-sdk>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/kalil0321/reverse-api-engineer"
Repository = "https://github.com/kalil0321/reverse-api-engineer"
Issues = "https://github.com/kalil0321/reverse-api-engineer/issues"

[project.scripts]
reverse-api-engineer = "reverse_api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/reverse_api"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/reverse_api"]
omit = [
    "src/reverse_api/cli.py",
    "src/reverse_api/browser.py",
]

[tool.coverage.report]
show_missing = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 150
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
